# datafusion-promql

./: CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/hooks/: session-start.sh
.claude/plans/: architecture.md  functions.md
.github/workflows/: ci.yml
data/: metrics.parquet
src/: datasource.rs  error.rs  lib.rs  normalize.rs  parquet.rs  types.rs
src/exec/: aggregate_eval.rs  binary_eval.rs  instant_eval.rs  instant_fn_eval.rs  instant_func_eval.rs  mod.rs  range_eval.rs  range_func_eval.rs  step_eval.rs
src/func/: aggregate.rs  datetime.rs  instant.rs  label.rs  mod.rs  range.rs  range_udaf.rs  sort.rs  udf.rs
src/func/udf/: abs.rs  acos.rs  acosh.rs  asin.rs  asinh.rs  atan.rs  atanh.rs  ceil.rs  clamp.rs  clamp_max.rs  clamp_min.rs  cos.rs  cosh.rs  deg.rs  exp.rs  floor.rs  ln.rs  log10.rs  log2.rs  mod.rs  rad.rs  round.rs  sgn.rs  sin.rs  sinh.rs  sqrt.rs  tan.rs  tanh.rs
src/node/: aggregate_eval.rs  binary_eval.rs  datetime_function.rs  instant_eval.rs  instant_fn_eval.rs  instant_func_eval.rs  instant_function.rs  mod.rs  range_eval.rs  range_func_eval.rs  scalar_function.rs  step_eval.rs
src/opt/logical/: datetime_func_to_projection.rs  instant_func_to_projection.rs  lift_constant_projections.rs  mod.rs  push_instant_eval_through_union.rs  range_vector_to_aggregation.rs  remove_noop_projections.rs
src/plan/: expr.rs  instant_func_to_projection.rs  lift_constant_projections.rs  mod.rs  range_vector_to_aggregation.rs  selector.rs
tests/: abs_function.rs  aggregate_binary.rs  instant_fn.rs  instant_query.rs  parquet_query.rs  range_query.rs  rezolus_query.rs
tests/integration/: abs_function.rs  aggregate_binary.rs  aggregate_ops.rs  clamp_function.rs  clamp_min_function.rs  inspect_offset.rs  instant_query.rs  label_functions.rs  main.rs  parquet_query.rs  range_query.rs  rezolus_query.rs  round_function.rs  sort_function.rs  trig_functions.rs
tests/integration/functions/: abs.rs  aggregate_binary.rs  aggregate_ops.rs  clamp.rs  datetime.rs  instant.rs  label.rs  mod.rs  round.rs  sort.rs  trig.rs
tests/integration/optimizations/: lift_constant_projections.rs  mod.rs  push_instant_eval_through_union.rs
