[package]
name = "datafusion-promql"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "query-graph"
path = "src/bin/query-graph.rs"

[[bin]]
name = "query-plan"
path = "src/bin/query-plan.rs"
required-features = ["parquet"]

[dependencies]
clap = { version = "4", features = ["derive"] }
promql-parser = "0.8"
datafusion = "53"
arrow = { version = "58", features = ["prettyprint"] }
async-trait = "0.1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[features]
parquet = ["datafusion/parquet"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
