[package]
name = "datafusion-promql"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "query-graph"
path = "src/bin/query-graph.rs"

[[bin]]
name = "query-plan"
path = "src/bin/query-plan.rs"
required-features = ["parquet"]

[[bin]]
name = "query-plot"
path = "src/bin/query-plot.rs"
required-features = ["plot"]

[dependencies]
clap = { version = "4", features = ["derive"] }
promql-parser = "0.8"
datafusion = "53"
arrow = { version = "58", features = ["prettyprint"] }
async-trait = "0.1"
thiserror = "2"
chrono = "0.4"
futures = "0.3"
regex = "1"
tokio = { version = "1", features = ["full"] }
textplots = { version = "0.8", optional = true }
rgb = { version = "0.8", optional = true }
terminal_size = { version = "0.4", optional = true }

[features]
parquet = ["datafusion/parquet"]
plot = ["parquet", "textplots", "rgb", "terminal_size"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
